# test-rust-4

./: Anchor.toml  README.md
programs/rust-test-4/: Cargo.toml
programs/rust-test-4/src/: lib.rs
tests/: rust-test-4.ts
