[package]
name = "rust-test-4"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rust_test_4"

[features]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
solana-program = "1.17.0"

[lints.rust]
unexpected_cfgs = "allow"

